[package]
name = "svl-tools"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
clap = { version = "4.5.4", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
crc = "3.2.1"
env_logger = "0.11.3"
indicatif = "0.17.8"
log = "0.4.21"
serialport = "4.3.0"
