[package]
name = "svl-tools"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
description = "Tools for interfacing with the Sparkfun Variable Bootloader (SVL)."
authors = ["Gabriel Marcano"]
repository = "https://github.com/gemarcano/svl-tools"
keywords = ["Apollo3", "Artemis", "programmer", "bootloader"]
categories = ["command-line-utilities"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
clap = { version = "4.5.20", features = ["derive"] }
clap-verbosity-flag = "2.2.2"
crc = "3.2.1"
env_logger = "0.11.5"
indicatif = "0.17.8"
log = "0.4.22"
serialport = "4.6.0"
