[package]
name = "svl-tools"
version = "0.1.1"
edition = "2024"
license = "BSD-3-Clause"
description = "Tools for interfacing with the Sparkfun Variable Bootloader (SVL)."
authors = ["Gabriel Marcano"]
repository = "https://github.com/gemarcano/svl-tools"
keywords = ["Apollo3", "Artemis", "programmer", "bootloader"]
categories = ["command-line-utilities"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
clap = { version = "4.5.42", features = ["derive"] }
clap-verbosity-flag = "3.0.3"
crc = "3.3.0"
env_logger = "0.11.8"
indicatif = "0.18.0"
log = "0.4.27"
serialport = "4.7.2"
